[package]
name = "sequencetree"
version = "0.1.2"
authors = ["Amit Hendin"]
edition = "2018"
license = "GPL-3.0"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/amithendin/sequencetree.git"
description = "a new type of collection to store keys and their corresponding values"
keywords = ["collections"]
categories = ["data-structures"]

[dev-dependencies]
rand = "0.7.3"
